// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add_user.vue createUser show validate error messages 1`] = `
<table>
  <h2>
    Adding Users
  </h2>
   
  <p>
    
    Please correct the following error(s):
    
    <ul>
      <li
        class="error"
      >
         Name required
      </li>
      <li
        class="error"
      >
         Username required
      </li>
    </ul>
  </p>
   
  <div>
    <input
      name="Name"
      placeholder="Name"
    />
     
    <input
      name="Username"
      placeholder="Username"
    />
  </div>
   
  <button>
    Create User
  </button>
   
  <a
    class="button"
    href="/users"
  >
    Exit
  </a>
</table>
`;

exports[`add_user.vue is a Vue instance 1`] = `
<table>
  <h2>
    Adding Users
  </h2>
   
  <!---->
   
  <div>
    <input
      name="Name"
      placeholder="Name"
    />
     
    <input
      name="Username"
      placeholder="Username"
    />
  </div>
   
  <button>
    Create User
  </button>
   
  <a
    class="button"
    href="/users"
  >
    Exit
  </a>
</table>
`;
